使用LikedList 实现队列